# uuid_cmake

./: CMakeLists.txt  gen_uuid.c  uuid-config.cmake  uuid.pc
